--- a/WebBuild.yml
+++ b/WebBuild.yml
@@ -27,6 +27,12 @@ steps:
     solution: '$(solution)'
     msbuildArgs: '/p:DeployOnBuild=true /p:WebPublishMethod=Package /p:PackageAsSingleFile=true /p:SkipInvalidConfigurations=true /p:PackageLocation="$(Build.ArtifactStagingDirectory)"'
     platform: 'any cpu'
+
+- task: CopyFiles@2
+  displayName: 'Copy Release Scripts'
+  inputs:
+    SourceFolder: '$(System.DefaultWorkingDirectory)/Scripts'
+    TargetFolder: '$(Build.ArtifactStagingDirectory)/Scripts'
     
 - task: PublishBuildArtifacts@1
   displayName: 'Publish Artifact'
